feat: pip install support with platformdirs migration
- Add platformdirs for cross-platform user data directories
- Restructure: data/ -> metadata/ (bundled), metadata/ -> sync/ (code)
- Unified CLI: 'bua analyze' and 'bua refresh' subcommands
- Add console scripts to pyproject.toml (bua, bedrock-usage-analyzer)
- Add configurable results directory with -o/--output-dir option
- Add BEDROCK_ANALYZER_DATA_DIR env var for custom metadata location
- Add --update-bundle flag for maintainers
- Delete cli/ folder, consolidate into __main__.py
- Update bin scripts to use new module paths
- Update README with new commands and metadata storage docs

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,6 +8,6 @@ include CONTRIBUTING.md
 include CODE_OF_CONDUCT.md
 include requirements.txt
 recursive-include src/bedrock_usage_analyzer/templates *.html
-recursive-include metadata *.yml *.csv
+recursive-include src/bedrock_usage_analyzer/metadata *.yml *.csv
 global-exclude __pycache__
 global-exclude *.py[co]
