--- a/metadata/fm-list-eu-south-1.yml
+++ b/metadata/fm-list-eu-south-1.yml
@@ -1,5 +1,19 @@
 models:
 - endpoints:
+    eu:
+      quotas:
+        concurrent: null
+        rpm:
+          code: L-F06F1187
+          name: Cross-region model inference requests per minute for Amazon Nova 2
+            Lite
+        tpd:
+          code: L-210172B5
+          name: Model invocation max tokens per day for Amazon Nova 2 Lite (doubled
+            for cross-region calls)
+        tpm:
+          code: L-C6F5908D
+          name: Cross-region model inference tokens per minute for Amazon Nova 2 Lite
     global:
       quotas:
         concurrent: null
@@ -16,13 +30,14 @@ models:
           name: Global cross-region model inference tokens per minute for Amazon Nova
             2 Lite
   inference_profiles:
+  - eu
   - global
   inference_types:
   - INFERENCE_PROFILE
   model_id: amazon.nova-2-lite-v1:0
   provider: Amazon
 - endpoints:
-    apac:
+    eu:
       quotas:
         concurrent: null
         rpm:
@@ -33,13 +48,13 @@ models:
           code: L-7C42E72A
           name: Cross-region model inference tokens per minute for Amazon Nova Lite
   inference_profiles:
-  - apac
+  - eu
   inference_types:
   - INFERENCE_PROFILE
   model_id: amazon.nova-lite-v1:0
   provider: Amazon
 - endpoints:
-    apac:
+    eu:
       quotas:
         concurrent: null
         rpm:
@@ -50,13 +65,13 @@ models:
           code: L-DC7FF66C
           name: Cross-region model inference tokens per minute for Amazon Nova Micro
   inference_profiles:
-  - apac
+  - eu
   inference_types:
   - INFERENCE_PROFILE
   model_id: amazon.nova-micro-v1:0
   provider: Amazon
 - endpoints:
-    apac:
+    eu:
       quotas:
         concurrent: null
         rpm:
@@ -67,32 +82,10 @@ models:
           code: L-C0326783
           name: Cross-region model inference tokens per minute for Amazon Nova Pro
   inference_profiles:
-  - apac
+  - eu
   inference_types:
   - INFERENCE_PROFILE
   model_id: amazon.nova-pro-v1:0
-  provider: Amazon
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-DF0E34D4
-          name: On-demand model inference requests per minute for Amazon Titan Multimodal
-            Embeddings G1
-        tpd: null
-        tpm:
-          code: L-ABC24664
-          name: On-demand model inference tokens per minute for Amazon Titan Multimodal
-            Embeddings G1
-  inference_types:
-  - ON_DEMAND
-  model_id: amazon.titan-embed-image-v1
-  provider: Amazon
-- endpoints: {}
-  inference_types:
-  - PROVISIONED
-  model_id: amazon.titan-embed-image-v1:0
   provider: Amazon
 - endpoints:
     base:
@@ -111,161 +104,25 @@ models:
   - ON_DEMAND
   model_id: amazon.titan-embed-text-v2:0
   provider: Amazon
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-A70F1DE3
-          name: On-demand model inference requests per minute for Amazon Titan Text
-            Lite
-        tpd: null
-        tpm:
-          code: L-70BE83E9
-          name: On-demand model inference tokens per minute for Amazon Titan Text
-            Lite
-  inference_types:
-  - ON_DEMAND
-  model_id: amazon.titan-text-lite-v1
-  provider: Amazon
-- endpoints: {}
-  inference_types:
-  - PROVISIONED
-  model_id: amazon.titan-text-lite-v1:0:4k
+- inference_types: []
+  model_id: amazon.titan-embed-text-v2:0:8k
   provider: Amazon
 - endpoints:
-    apac:
+    eu:
       quotas:
         concurrent: null
         rpm:
-          code: L-F457545D
+          code: L-CCA5DF70
           name: Cross-region model inference requests per minute for Anthropic Claude
-            3.5 Sonnet
-        tpd: null
-        tpm:
-          code: L-479B647F
-          name: Cross-region model inference tokens per minute for Anthropic Claude
-            3.5 Sonnet
-  inference_profiles:
-  - apac
-  inference_types:
-  - INFERENCE_PROFILE
-  model_id: anthropic.claude-3-5-sonnet-20240620-v1:0
-  provider: Anthropic
-- endpoints:
-    apac:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-1D3E59A3
-          name: Cross-Region model inference requests per minute for Anthropic Claude
-            3.5 Sonnet V2
-        tpd: null
-        tpm:
-          code: L-FF8B4E28
-          name: Cross-Region model inference tokens per minute for Anthropic Claude
-            3.5 Sonnet V2
-  inference_profiles:
-  - apac
-  inference_types:
-  - INFERENCE_PROFILE
-  model_id: anthropic.claude-3-5-sonnet-20241022-v2:0
-  provider: Anthropic
-- endpoints:
-    apac:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-3D8CC480
-          name: Cross-region model inference requests per minute for Anthropic Claude
-            3.7 Sonnet V1
+            Haiku 4.5
         tpd:
-          code: L-9EB71894
-          name: Model invocation max tokens per day for Anthropic Claude 3.7 Sonnet
-            V1 (doubled for cross-region calls)
+          code: L-B5C049AE
+          name: Global cross-region model inference tokens per day for Anthropic Claude
+            Haiku 4.5
         tpm:
-          code: L-6E888CC2
+          code: L-58BE175A
           name: Cross-region model inference tokens per minute for Anthropic Claude
-            3.7 Sonnet V1
-  inference_profiles:
-  - apac
-  inference_types:
-  - INFERENCE_PROFILE
-  model_id: anthropic.claude-3-7-sonnet-20250219-v1:0
-  provider: Anthropic
-- endpoints:
-    apac:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-616A3F5B
-          name: Cross-region model inference requests per minute for Anthropic Claude
-            3 Haiku
-        tpd: null
-        tpm:
-          code: L-DCADBC78
-          name: Cross-region model inference tokens per minute for Anthropic Claude
-            3 Haiku
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-2DC80978
-          name: On-demand model inference requests per minute for Anthropic Claude
-            3 Haiku
-        tpd: null
-        tpm:
-          code: L-8CE99163
-          name: On-demand model inference tokens per minute for Anthropic Claude 3
-            Haiku
-  inference_profiles:
-  - apac
-  inference_types:
-  - ON_DEMAND
-  model_id: anthropic.claude-3-haiku-20240307-v1:0
-  provider: Anthropic
-- endpoints: {}
-  inference_types:
-  - PROVISIONED
-  model_id: anthropic.claude-3-haiku-20240307-v1:0:48k
-  provider: Anthropic
-- endpoints:
-    apac:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-46591118
-          name: Cross-region model inference requests per minute for Anthropic Claude
-            3 Sonnet
-        tpd: null
-        tpm:
-          code: L-5DF13F64
-          name: Cross-region model inference tokens per minute for Anthropic Claude
-            3 Sonnet
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-F406804E
-          name: On-demand model inference requests per minute for Anthropic Claude
-            3 Sonnet
-        tpd: null
-        tpm:
-          code: L-4C35BB2A
-          name: On-demand model inference tokens per minute for Anthropic Claude 3
-            Sonnet
-  inference_profiles:
-  - apac
-  inference_types:
-  - ON_DEMAND
-  model_id: anthropic.claude-3-sonnet-20240229-v1:0
-  provider: Anthropic
-- endpoints: {}
-  inference_types:
-  - PROVISIONED
-  model_id: anthropic.claude-3-sonnet-20240229-v1:0:28k
-  provider: Anthropic
-- endpoints:
+            Haiku 4.5
     global:
       quotas:
         concurrent: null
@@ -282,12 +139,28 @@ models:
           name: Global cross-region model inference tokens per minute for Anthropic
             Claude Haiku 4.5
   inference_profiles:
+  - eu
   - global
   inference_types:
   - INFERENCE_PROFILE
   model_id: anthropic.claude-haiku-4-5-20251001-v1:0
   provider: Anthropic
 - endpoints:
+    eu:
+      quotas:
+        concurrent: null
+        rpm:
+          code: L-27989F42
+          name: Cross-region model inference requests per minute for Anthropic Claude
+            Opus 4.5
+        tpd:
+          code: L-F397ECBF
+          name: Model invocation max tokens per day for Anthropic Claude Opus 4.5
+            (doubled for cross-region calls)
+        tpm:
+          code: L-7007E9C9
+          name: Cross-region model inference tokens per minute for Anthropic Claude
+            Opus 4.5
     global:
       quotas:
         concurrent: null
@@ -304,13 +177,14 @@ models:
           name: Global cross-region model inference tokens per minute for Anthropic
             Claude Opus 4.5
   inference_profiles:
+  - eu
   - global
   inference_types:
   - INFERENCE_PROFILE
   model_id: anthropic.claude-opus-4-5-20251101-v1:0
   provider: Anthropic
 - endpoints:
-    apac:
+    eu:
       quotas:
         concurrent: null
         rpm:
@@ -326,12 +200,27 @@ models:
           name: Cross-region model inference tokens per minute for Anthropic Claude
             Sonnet 4 V1
   inference_profiles:
-  - apac
+  - eu
   inference_types:
   - INFERENCE_PROFILE
   model_id: anthropic.claude-sonnet-4-20250514-v1:0
   provider: Anthropic
 - endpoints:
+    eu:
+      quotas:
+        concurrent: null
+        rpm:
+          code: L-4A6BFAB1
+          name: Cross-region model inference requests per minute for Anthropic Claude
+            Sonnet 4.5 V1
+        tpd:
+          code: L-381AD9EE
+          name: Model invocation max tokens per day for Anthropic Claude Sonnet 4.5
+            V1 (doubled for cross-region calls)
+        tpm:
+          code: L-F4DDD3EB
+          name: Cross-region model inference tokens per minute for Anthropic Claude
+            Sonnet 4.5 V1
     global:
       quotas:
         concurrent: null
@@ -348,38 +237,27 @@ models:
           name: Global cross-region model inference tokens per minute for Anthropic
             Claude Sonnet 4.5 V1
   inference_profiles:
+  - eu
   - global
   inference_types:
   - INFERENCE_PROFILE
   model_id: anthropic.claude-sonnet-4-5-20250929-v1:0
   provider: Anthropic
 - endpoints:
-    base:
+    eu:
       quotas:
         concurrent: null
         rpm:
-          code: L-FF8E7864
-          name: On-demand model inference requests per minute for Cohere Embed English
-        tpd: null
+          code: L-EB8C1F30
+          name: Cross-region model inference requests per minute for Cohere Embed
+            V4
+        tpd:
+          code: L-795ADAB0
+          name: Global cross-region model inference tokens per day for Cohere Embed
+            V4
         tpm:
-          code: L-A2BE277A
-          name: On-demand model inference tokens per minute for Cohere Embed English
-  inference_types:
-  - ON_DEMAND
-  model_id: cohere.embed-english-v3
-  provider: Cohere
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm: null
-        tpd: null
-        tpm: null
-  inference_types:
-  - ON_DEMAND
-  model_id: cohere.embed-multilingual-v3
-  provider: Cohere
-- endpoints:
+          code: L-4C3F0FE6
+          name: Cross-region model inference tokens per minute for Cohere Embed V4
     global:
       quotas:
         concurrent: null
@@ -396,26 +274,12 @@ models:
           name: Global cross-region model inference tokens per minute for Cohere Embed
             V4
   inference_profiles:
+  - eu
   - global
   inference_types:
   - INFERENCE_PROFILE
   model_id: cohere.embed-v4:0
   provider: Cohere
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-7A5451CB
-          name: On-demand model inference requests per minute for DeepSeek V3 V1
-        tpd: null
-        tpm:
-          code: L-30A6895A
-          name: On-demand model inference tokens per minute for DeepSeek V3 V1
-  inference_types:
-  - ON_DEMAND
-  model_id: deepseek.v3-v1:0
-  provider: DeepSeek
 - endpoints:
     base:
       quotas:
@@ -466,38 +330,6 @@ models:
       quotas:
         concurrent: null
         rpm:
-          code: L-46D383AF
-          name: On-demand model inference requests per minute for Meta Llama 3 70B
-            Instruct
-        tpd: null
-        tpm:
-          code: L-609E24B0
-          name: On-demand model inference tokens per minute for Meta Llama 3 70B Instruct
-  inference_types:
-  - ON_DEMAND
-  model_id: meta.llama3-70b-instruct-v1:0
-  provider: Meta
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-320BEFEB
-          name: On-demand model inference requests per minute for Meta Llama 3 8B
-            Instruct
-        tpd: null
-        tpm:
-          code: L-03A9B835
-          name: On-demand model inference tokens per minute for Meta Llama 3 8B Instruct
-  inference_types:
-  - ON_DEMAND
-  model_id: meta.llama3-8b-instruct-v1:0
-  provider: Meta
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
           code: L-828C986E
           name: On-demand model inference requests per minute for Minimax M2
         tpd: null
@@ -508,22 +340,6 @@ models:
   - ON_DEMAND
   model_id: minimax.minimax-m2
   provider: MiniMax
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-B14A9603
-          name: On-demand model inference requests per minute for Magistral Small
-            1.2
-        tpd: null
-        tpm:
-          code: L-D18AC5F7
-          name: On-demand model inference tokens per minute for Magistral Small 1.2
-  inference_types:
-  - ON_DEMAND
-  model_id: mistral.magistral-small-2509
-  provider: Mistral AI
 - endpoints:
     base:
       quotas:
@@ -544,21 +360,6 @@ models:
       quotas:
         concurrent: null
         rpm:
-          code: L-DCA37E91
-          name: On-demand model inference requests per minute for Ministral 3B 3.0
-        tpd: null
-        tpm:
-          code: L-8A4BEE90
-          name: On-demand model inference tokens per minute for Ministral 3B 3.0
-  inference_types:
-  - ON_DEMAND
-  model_id: mistral.ministral-3-3b-instruct
-  provider: Mistral AI
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
           code: L-2BDF9A55
           name: On-demand model inference requests per minute for Ministral 8B 3.0
         tpd: null
@@ -568,70 +369,6 @@ models:
   inference_types:
   - ON_DEMAND
   model_id: mistral.ministral-3-8b-instruct
-  provider: Mistral AI
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-D9A35062
-          name: On-demand model inference requests per minute for Mistral 7B Instruct
-        tpd: null
-        tpm:
-          code: L-02D831F1
-          name: On-demand model inference tokens per minute for Mistral AI Mistral
-            7B Instruct
-  inference_types:
-  - ON_DEMAND
-  model_id: mistral.mistral-7b-instruct-v0:2
-  provider: Mistral AI
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-3AF844DB
-          name: On-demand model inference requests per minute for Mistral Large
-        tpd: null
-        tpm:
-          code: L-01447289
-          name: On-demand model inference tokens per minute for Mistral AI Mistral
-            Large
-  inference_types:
-  - ON_DEMAND
-  model_id: mistral.mistral-large-2402-v1:0
-  provider: Mistral AI
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-5B274E24
-          name: On-demand model inference requests per minute for Mistral Large 3
-        tpd: null
-        tpm:
-          code: L-C709F563
-          name: On-demand model inference tokens per minute for Mistral Large 3
-  inference_types:
-  - ON_DEMAND
-  model_id: mistral.mistral-large-3-675b-instruct
-  provider: Mistral AI
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-FD938632
-          name: On-demand model inference requests per minute for Mistral Mixtral
-            8x7b Instruct
-        tpd: null
-        tpm:
-          code: L-490F4D1F
-          name: On-demand model inference tokens per minute for Mistral AI Mixtral
-            8X7BB Instruct
-  inference_types:
-  - ON_DEMAND
-  model_id: mistral.mixtral-8x7b-instruct-v0:1
   provider: Mistral AI
 - endpoints:
     base:
@@ -663,21 +400,6 @@ models:
   - ON_DEMAND
   model_id: mistral.voxtral-small-24b-2507
   provider: Mistral AI
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-02572418
-          name: On-demand model inference requests per minute for Kimi K2 Thinking
-        tpd: null
-        tpm:
-          code: L-03579AC2
-          name: On-demand model inference tokens per minute for Kimi K2 Thinking
-  inference_types:
-  - ON_DEMAND
-  model_id: moonshot.kimi-k2-thinking
-  provider: Moonshot AI
 - endpoints:
     base:
       quotas:
@@ -840,23 +562,6 @@ models:
       quotas:
         concurrent: null
         rpm:
-          code: L-CBE7E3CD
-          name: On-demand model inference requests per minute for Qwen3 Coder 480B
-            a35b V1
-        tpd: null
-        tpm:
-          code: L-4D0E44C8
-          name: On-demand model inference tokens per minute for Qwen3 Coder 480B a35b
-            V1
-  inference_types:
-  - ON_DEMAND
-  model_id: qwen.qwen3-coder-480b-a35b-v1:0
-  provider: Qwen
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
           code: L-07B3CEEA
           name: On-demand model inference requests per minute for Qwen3 Next 80B A3B
         tpd: null
@@ -883,13 +588,16 @@ models:
   model_id: qwen.qwen3-vl-235b-a22b
   provider: Qwen
 - endpoints:
-    global:
+    eu:
       quotas:
         concurrent: null
-        rpm: null
+        rpm:
+          code: L-6E046197
+          name: Cross-region model inference requests per minute for Twelve Labs Pegasus
         tpd: null
         tpm: null
   inference_profiles:
+  - eu
   - global
   inference_types:
   - INFERENCE_PROFILE
