--- a/src/bedrock_usage_analyzer/metadata/fm-list-ap-southeast-3.yml
+++ b/src/bedrock_usage_analyzer/metadata/fm-list-ap-southeast-3.yml
@@ -1,19 +1,5 @@
 models:
 - endpoints:
-    eu:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-F06F1187
-          name: Cross-region model inference requests per minute for Amazon Nova 2
-            Lite
-        tpd:
-          code: L-210172B5
-          name: Model invocation max tokens per day for Amazon Nova 2 Lite (doubled
-            for cross-region calls)
-        tpm:
-          code: L-C6F5908D
-          name: Cross-region model inference tokens per minute for Amazon Nova 2 Lite
     global:
       quotas:
         concurrent: null
@@ -30,13 +16,22 @@ models:
           name: Global cross-region model inference tokens per minute for Amazon Nova
             2 Lite
   inference_profiles:
-  - eu
   - global
   inference_types:
   - INFERENCE_PROFILE
   model_id: amazon.nova-2-lite-v1:0
   provider: Amazon
 - endpoints:
+    apac:
+      quotas:
+        concurrent: null
+        rpm:
+          code: L-89F8391A
+          name: Cross-region model inference requests per minute for Amazon Nova Lite
+        tpd: null
+        tpm:
+          code: L-7C42E72A
+          name: Cross-region model inference tokens per minute for Amazon Nova Lite
     base:
       quotas:
         concurrent: null
@@ -47,25 +42,23 @@ models:
         tpm:
           code: L-70423BF8
           name: On-demand model inference tokens per minute for Amazon Nova Lite
-    eu:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-89F8391A
-          name: Cross-region model inference requests per minute for Amazon Nova Lite
-        tpd: null
-        tpm:
-          code: L-7C42E72A
-          name: Cross-region model inference tokens per minute for Amazon Nova Lite
   inference_profiles:
-  - eu
+  - apac
   inference_types:
   - INFERENCE_PROFILE
   - ON_DEMAND
   model_id: amazon.nova-lite-v1:0
   provider: Amazon
+- endpoints: {}
+  inference_types: []
+  model_id: amazon.nova-lite-v1:0:24k
+  provider: Amazon
+- endpoints: {}
+  inference_types: []
+  model_id: amazon.nova-lite-v1:0:300k
+  provider: Amazon
 - endpoints:
-    eu:
+    apac:
       quotas:
         concurrent: null
         rpm:
@@ -76,13 +69,21 @@ models:
           code: L-DC7FF66C
           name: Cross-region model inference tokens per minute for Amazon Nova Micro
   inference_profiles:
-  - eu
+  - apac
   inference_types:
   - INFERENCE_PROFILE
   model_id: amazon.nova-micro-v1:0
   provider: Amazon
+- endpoints: {}
+  inference_types: []
+  model_id: amazon.nova-micro-v1:0:128k
+  provider: Amazon
+- endpoints: {}
+  inference_types: []
+  model_id: amazon.nova-micro-v1:0:24k
+  provider: Amazon
 - endpoints:
-    eu:
+    apac:
       quotas:
         concurrent: null
         rpm:
@@ -92,80 +93,32 @@ models:
         tpm:
           code: L-C0326783
           name: Cross-region model inference tokens per minute for Amazon Nova Pro
+    base:
+      quotas:
+        concurrent: null
+        rpm:
+          code: L-F2717A44
+          name: On-demand model inference requests per minute for Amazon Nova Pro
+        tpd: null
+        tpm:
+          code: L-CE33604C
+          name: On-demand model inference tokens per minute for Amazon Nova Pro
   inference_profiles:
-  - eu
+  - apac
   inference_types:
   - INFERENCE_PROFILE
+  - ON_DEMAND
   model_id: amazon.nova-pro-v1:0
   provider: Amazon
-- endpoints:
-    base:
-      quotas:
-        concurrent:
-          code: L-FC3AC7EE
-          name: On-demand InvokeModel concurrent requests for Amazon Nova Sonic
-        rpm: null
-        tpd: null
-        tpm: null
-  inference_types:
-  - ON_DEMAND
-  model_id: amazon.nova-sonic-v1:0
+- endpoints: {}
+  inference_types: []
+  model_id: amazon.nova-pro-v1:0:24k
+  provider: Amazon
+- endpoints: {}
+  inference_types: []
+  model_id: amazon.nova-pro-v1:0:300k
   provider: Amazon
 - endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-26C560CE
-          name: On-demand model inference requests per minute for Amazon Titan Text
-            Embeddings V2
-        tpd: null
-        tpm:
-          code: L-DE641971
-          name: On-demand model inference tokens per minute for Amazon Titan Text
-            Embeddings V2
-  inference_types:
-  - ON_DEMAND
-  model_id: amazon.titan-embed-text-v2:0
-  provider: Amazon
-- endpoints:
-    eu:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-3D8CC480
-          name: Cross-region model inference requests per minute for Anthropic Claude
-            3.7 Sonnet V1
-        tpd:
-          code: L-9EB71894
-          name: Model invocation max tokens per day for Anthropic Claude 3.7 Sonnet
-            V1 (doubled for cross-region calls)
-        tpm:
-          code: L-6E888CC2
-          name: Cross-region model inference tokens per minute for Anthropic Claude
-            3.7 Sonnet V1
-  inference_profiles:
-  - eu
-  inference_types:
-  - INFERENCE_PROFILE
-  model_id: anthropic.claude-3-7-sonnet-20250219-v1:0
-  provider: Anthropic
-- endpoints:
-    eu:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-CCA5DF70
-          name: Cross-region model inference requests per minute for Anthropic Claude
-            Haiku 4.5
-        tpd:
-          code: L-B5C049AE
-          name: Global cross-region model inference tokens per day for Anthropic Claude
-            Haiku 4.5
-        tpm:
-          code: L-58BE175A
-          name: Cross-region model inference tokens per minute for Anthropic Claude
-            Haiku 4.5
     global:
       quotas:
         concurrent: null
@@ -182,28 +135,12 @@ models:
           name: Global cross-region model inference tokens per minute for Anthropic
             Claude Haiku 4.5
   inference_profiles:
-  - eu
   - global
   inference_types:
   - INFERENCE_PROFILE
   model_id: anthropic.claude-haiku-4-5-20251001-v1:0
   provider: Anthropic
 - endpoints:
-    eu:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-27989F42
-          name: Cross-region model inference requests per minute for Anthropic Claude
-            Opus 4.5
-        tpd:
-          code: L-F397ECBF
-          name: Model invocation max tokens per day for Anthropic Claude Opus 4.5
-            (doubled for cross-region calls)
-        tpm:
-          code: L-7007E9C9
-          name: Cross-region model inference tokens per minute for Anthropic Claude
-            Opus 4.5
     global:
       quotas:
         concurrent: null
@@ -220,14 +157,13 @@ models:
           name: Global cross-region model inference tokens per minute for Anthropic
             Claude Opus 4.5
   inference_profiles:
-  - eu
   - global
   inference_types:
   - INFERENCE_PROFILE
   model_id: anthropic.claude-opus-4-5-20251101-v1:0
   provider: Anthropic
 - endpoints:
-    eu:
+    apac:
       quotas:
         concurrent: null
         rpm:
@@ -243,27 +179,12 @@ models:
           name: Cross-region model inference tokens per minute for Anthropic Claude
             Sonnet 4 V1
   inference_profiles:
-  - eu
+  - apac
   inference_types:
   - INFERENCE_PROFILE
   model_id: anthropic.claude-sonnet-4-20250514-v1:0
   provider: Anthropic
 - endpoints:
-    eu:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-4A6BFAB1
-          name: Cross-region model inference requests per minute for Anthropic Claude
-            Sonnet 4.5 V1
-        tpd:
-          code: L-381AD9EE
-          name: Model invocation max tokens per day for Anthropic Claude Sonnet 4.5
-            V1 (doubled for cross-region calls)
-        tpm:
-          code: L-F4DDD3EB
-          name: Cross-region model inference tokens per minute for Anthropic Claude
-            Sonnet 4.5 V1
     global:
       quotas:
         concurrent: null
@@ -280,27 +201,12 @@ models:
           name: Global cross-region model inference tokens per minute for Anthropic
             Claude Sonnet 4.5 V1
   inference_profiles:
-  - eu
   - global
   inference_types:
   - INFERENCE_PROFILE
   model_id: anthropic.claude-sonnet-4-5-20250929-v1:0
   provider: Anthropic
 - endpoints:
-    eu:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-EB8C1F30
-          name: Cross-region model inference requests per minute for Cohere Embed
-            V4
-        tpd:
-          code: L-795ADAB0
-          name: Global cross-region model inference tokens per day for Cohere Embed
-            V4
-        tpm:
-          code: L-4C3F0FE6
-          name: Cross-region model inference tokens per minute for Cohere Embed V4
     global:
       quotas:
         concurrent: null
@@ -317,7 +223,6 @@ models:
           name: Global cross-region model inference tokens per minute for Cohere Embed
             V4
   inference_profiles:
-  - eu
   - global
   inference_types:
   - INFERENCE_PROFILE
@@ -338,25 +243,6 @@ models:
   - ON_DEMAND
   model_id: deepseek.v3-v1:0
   provider: DeepSeek
-- endpoints:
-    eu:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-674F42D5
-          name: Cross-region model inference requests per minute for Mistral Pixtral
-            Large 25.02 V1
-        tpd: null
-        tpm:
-          code: L-4B9F76B0
-          name: Cross-region model inference tokens per minute for Mistral Pixtral
-            Large 25.02 V1
-  inference_profiles:
-  - eu
-  inference_types:
-  - INFERENCE_PROFILE
-  model_id: mistral.pixtral-large-2502-v1:0
-  provider: Mistral AI
 - endpoints:
     base:
       quotas:
@@ -454,16 +340,13 @@ models:
   model_id: qwen.qwen3-coder-480b-a35b-v1:0
   provider: Qwen
 - endpoints:
-    eu:
+    global:
       quotas:
         concurrent: null
-        rpm:
-          code: L-6E046197
-          name: Cross-region model inference requests per minute for Twelve Labs Pegasus
+        rpm: null
         tpd: null
         tpm: null
   inference_profiles:
-  - eu
   - global
   inference_types:
   - INFERENCE_PROFILE
