--- a/src/bedrock_usage_analyzer/metadata/fm-list-ap-southeast-4.yml
+++ b/src/bedrock_usage_analyzer/metadata/fm-list-ap-southeast-4.yml
@@ -43,23 +43,6 @@ models:
       quotas:
         concurrent: null
         rpm:
-          code: L-3F110E0F
-          name: Cross-region model inference requests per minute for Amazon Nova Micro
-        tpd: null
-        tpm:
-          code: L-DC7FF66C
-          name: Cross-region model inference tokens per minute for Amazon Nova Micro
-  inference_profiles:
-  - apac
-  inference_types:
-  - INFERENCE_PROFILE
-  model_id: amazon.nova-micro-v1:0
-  provider: Amazon
-- endpoints:
-    apac:
-      quotas:
-        concurrent: null
-        rpm:
           code: L-ED46B8C5
           name: Cross-region model inference requests per minute for Amazon Nova Pro
         tpd: null
@@ -73,136 +56,21 @@ models:
   model_id: amazon.nova-pro-v1:0
   provider: Amazon
 - endpoints:
-    apac:
+    au:
       quotas:
         concurrent: null
         rpm:
-          code: L-F457545D
+          code: L-CCA5DF70
           name: Cross-region model inference requests per minute for Anthropic Claude
-            3.5 Sonnet
-        tpd: null
-        tpm:
-          code: L-479B647F
-          name: Cross-region model inference tokens per minute for Anthropic Claude
-            3.5 Sonnet
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-254CACF4
-          name: On-demand model inference requests per minute for Anthropic Claude
-            3.5 Sonnet
-        tpd: null
-        tpm:
-          code: L-A50569E5
-          name: On-demand model inference tokens per minute for Anthropic Claude 3.5
-            Sonnet
-  inference_profiles:
-  - apac
-  inference_types:
-  - ON_DEMAND
-  model_id: anthropic.claude-3-5-sonnet-20240620-v1:0
-  provider: Anthropic
-- endpoints:
-    apac:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-1D3E59A3
-          name: Cross-Region model inference requests per minute for Anthropic Claude
-            3.5 Sonnet V2
-        tpd: null
-        tpm:
-          code: L-FF8B4E28
-          name: Cross-Region model inference tokens per minute for Anthropic Claude
-            3.5 Sonnet V2
-  inference_profiles:
-  - apac
-  inference_types:
-  - INFERENCE_PROFILE
-  model_id: anthropic.claude-3-5-sonnet-20241022-v2:0
-  provider: Anthropic
-- endpoints:
-    apac:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-3D8CC480
-          name: Cross-region model inference requests per minute for Anthropic Claude
-            3.7 Sonnet V1
+            Haiku 4.5
         tpd:
-          code: L-9EB71894
-          name: Model invocation max tokens per day for Anthropic Claude 3.7 Sonnet
-            V1 (doubled for cross-region calls)
+          code: L-B5C049AE
+          name: Global cross-region model inference tokens per day for Anthropic Claude
+            Haiku 4.5
         tpm:
-          code: L-6E888CC2
+          code: L-58BE175A
           name: Cross-region model inference tokens per minute for Anthropic Claude
-            3.7 Sonnet V1
-  inference_profiles:
-  - apac
-  inference_types:
-  - INFERENCE_PROFILE
-  model_id: anthropic.claude-3-7-sonnet-20250219-v1:0
-  provider: Anthropic
-- endpoints:
-    apac:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-616A3F5B
-          name: Cross-region model inference requests per minute for Anthropic Claude
-            3 Haiku
-        tpd: null
-        tpm:
-          code: L-DCADBC78
-          name: Cross-region model inference tokens per minute for Anthropic Claude
-            3 Haiku
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-2DC80978
-          name: On-demand model inference requests per minute for Anthropic Claude
-            3 Haiku
-        tpd: null
-        tpm:
-          code: L-8CE99163
-          name: On-demand model inference tokens per minute for Anthropic Claude 3
-            Haiku
-  inference_profiles:
-  - apac
-  inference_types:
-  - ON_DEMAND
-  model_id: anthropic.claude-3-haiku-20240307-v1:0
-  provider: Anthropic
-- endpoints:
-    apac:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-46591118
-          name: Cross-region model inference requests per minute for Anthropic Claude
-            3 Sonnet
-        tpd: null
-        tpm:
-          code: L-5DF13F64
-          name: Cross-region model inference tokens per minute for Anthropic Claude
-            3 Sonnet
-  inference_profiles:
-  - apac
-  inference_types:
-  - INFERENCE_PROFILE
-  model_id: anthropic.claude-3-sonnet-20240229-v1:0
-  provider: Anthropic
-- endpoints: {}
-  inference_types: []
-  model_id: anthropic.claude-3-sonnet-20240229-v1:0:200k
-  provider: Anthropic
-- endpoints: {}
-  inference_types: []
-  model_id: anthropic.claude-3-sonnet-20240229-v1:0:28k
-  provider: Anthropic
-- endpoints:
+            Haiku 4.5
     global:
       quotas:
         concurrent: null
@@ -219,6 +87,7 @@ models:
           name: Global cross-region model inference tokens per minute for Anthropic
             Claude Haiku 4.5
   inference_profiles:
+  - au
   - global
   inference_types:
   - INFERENCE_PROFILE
@@ -269,6 +138,21 @@ models:
   model_id: anthropic.claude-sonnet-4-20250514-v1:0
   provider: Anthropic
 - endpoints:
+    au:
+      quotas:
+        concurrent: null
+        rpm:
+          code: L-4A6BFAB1
+          name: Cross-region model inference requests per minute for Anthropic Claude
+            Sonnet 4.5 V1
+        tpd:
+          code: L-381AD9EE
+          name: Model invocation max tokens per day for Anthropic Claude Sonnet 4.5
+            V1 (doubled for cross-region calls)
+        tpm:
+          code: L-F4DDD3EB
+          name: Cross-region model inference tokens per minute for Anthropic Claude
+            Sonnet 4.5 V1
     global:
       quotas:
         concurrent: null
@@ -285,37 +169,12 @@ models:
           name: Global cross-region model inference tokens per minute for Anthropic
             Claude Sonnet 4.5 V1
   inference_profiles:
+  - au
   - global
   inference_types:
   - INFERENCE_PROFILE
   model_id: anthropic.claude-sonnet-4-5-20250929-v1:0
   provider: Anthropic
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-FF8E7864
-          name: On-demand model inference requests per minute for Cohere Embed English
-        tpd: null
-        tpm:
-          code: L-A2BE277A
-          name: On-demand model inference tokens per minute for Cohere Embed English
-  inference_types:
-  - ON_DEMAND
-  model_id: cohere.embed-english-v3
-  provider: Cohere
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm: null
-        tpd: null
-        tpm: null
-  inference_types:
-  - ON_DEMAND
-  model_id: cohere.embed-multilingual-v3
-  provider: Cohere
 - endpoints:
     global:
       quotas:
