--- a/src/bedrock_usage_analyzer/metadata/fm-list-us-west-1.yml
+++ b/src/bedrock_usage_analyzer/metadata/fm-list-us-west-1.yml
@@ -37,7 +37,7 @@ models:
   model_id: amazon.nova-2-lite-v1:0
   provider: Amazon
 - endpoints:
-    ca:
+    us:
       quotas:
         concurrent: null
         rpm:
@@ -48,97 +48,28 @@ models:
           code: L-7C42E72A
           name: Cross-region model inference tokens per minute for Amazon Nova Lite
   inference_profiles:
-  - ca
+  - us
   inference_types:
   - INFERENCE_PROFILE
   model_id: amazon.nova-lite-v1:0
   provider: Amazon
 - endpoints:
-    base:
+    us:
       quotas:
         concurrent: null
         rpm:
-          code: L-AAB0080F
-          name: On-demand model inference requests per minute for Amazon Rerank 1.0
-        tpd: null
-        tpm: null
-  inference_types:
-  - ON_DEMAND
-  model_id: amazon.rerank-v1:0
-  provider: Amazon
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-DF0E34D4
-          name: On-demand model inference requests per minute for Amazon Titan Multimodal
-            Embeddings G1
+          code: L-ED46B8C5
+          name: Cross-region model inference requests per minute for Amazon Nova Pro
         tpd: null
         tpm:
-          code: L-ABC24664
-          name: On-demand model inference tokens per minute for Amazon Titan Multimodal
-            Embeddings G1
+          code: L-C0326783
+          name: Cross-region model inference tokens per minute for Amazon Nova Pro
+  inference_profiles:
+  - us
   inference_types:
-  - ON_DEMAND
-  model_id: amazon.titan-embed-image-v1
+  - INFERENCE_PROFILE
+  model_id: amazon.nova-pro-v1:0
   provider: Amazon
-- endpoints: {}
-  inference_types:
-  - PROVISIONED
-  model_id: amazon.titan-embed-image-v1:0
-  provider: Amazon
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-26C560CE
-          name: On-demand model inference requests per minute for Amazon Titan Text
-            Embeddings V2
-        tpd: null
-        tpm:
-          code: L-DE641971
-          name: On-demand model inference tokens per minute for Amazon Titan Text
-            Embeddings V2
-  inference_types:
-  - ON_DEMAND
-  model_id: amazon.titan-embed-text-v2:0
-  provider: Amazon
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-2DC80978
-          name: On-demand model inference requests per minute for Anthropic Claude
-            3 Haiku
-        tpd: null
-        tpm:
-          code: L-8CE99163
-          name: On-demand model inference tokens per minute for Anthropic Claude 3
-            Haiku
-  inference_types:
-  - ON_DEMAND
-  model_id: anthropic.claude-3-haiku-20240307-v1:0
-  provider: Anthropic
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-F406804E
-          name: On-demand model inference requests per minute for Anthropic Claude
-            3 Sonnet
-        tpd: null
-        tpm:
-          code: L-4C35BB2A
-          name: On-demand model inference tokens per minute for Anthropic Claude 3
-            Sonnet
-  inference_types:
-  - ON_DEMAND
-  model_id: anthropic.claude-3-sonnet-20240229-v1:0
-  provider: Anthropic
 - endpoints:
     global:
       quotas:
@@ -216,6 +147,36 @@ models:
   model_id: anthropic.claude-opus-4-5-20251101-v1:0
   provider: Anthropic
 - endpoints:
+    us:
+      quotas:
+        concurrent: null
+        rpm:
+          code: L-559DCC33
+          name: Cross-region model inference requests per minute for Anthropic Claude
+            Sonnet 4 V1
+        tpd:
+          code: L-22F701C5
+          name: Model invocation max tokens per day for Anthropic Claude Sonnet 4
+            V1 (doubled for cross-region calls)
+        tpm:
+          code: L-59759B4A
+          name: Cross-region model inference tokens per minute for Anthropic Claude
+            Sonnet 4 V1
+  inference_profiles:
+  - us
+  inference_types:
+  - INFERENCE_PROFILE
+  model_id: anthropic.claude-sonnet-4-20250514-v1:0
+  provider: Anthropic
+- endpoints: {}
+  inference_types: []
+  model_id: anthropic.claude-sonnet-4-20250514-v1:0:200k
+  provider: Anthropic
+- endpoints: {}
+  inference_types: []
+  model_id: anthropic.claude-sonnet-4-20250514-v1:0:32k
+  provider: Anthropic
+- endpoints:
     global:
       quotas:
         concurrent: null
@@ -254,42 +215,6 @@ models:
   model_id: anthropic.claude-sonnet-4-5-20250929-v1:0
   provider: Anthropic
 - endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-FF8E7864
-          name: On-demand model inference requests per minute for Cohere Embed English
-        tpd: null
-        tpm:
-          code: L-A2BE277A
-          name: On-demand model inference tokens per minute for Cohere Embed English
-  inference_types:
-  - ON_DEMAND
-  model_id: cohere.embed-english-v3
-  provider: Cohere
-- endpoints: {}
-  inference_types:
-  - PROVISIONED
-  model_id: cohere.embed-english-v3:0:512
-  provider: Cohere
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm: null
-        tpd: null
-        tpm: null
-  inference_types:
-  - ON_DEMAND
-  model_id: cohere.embed-multilingual-v3
-  provider: Cohere
-- endpoints: {}
-  inference_types:
-  - PROVISIONED
-  model_id: cohere.embed-multilingual-v3:0:512
-  provider: Cohere
-- endpoints:
     global:
       quotas:
         concurrent: null
@@ -305,116 +230,120 @@ models:
           code: L-02DFBB76
           name: Global cross-region model inference tokens per minute for Cohere Embed
             V4
+    us:
+      quotas:
+        concurrent: null
+        rpm:
+          code: L-EB8C1F30
+          name: Cross-region model inference requests per minute for Cohere Embed
+            V4
+        tpd:
+          code: L-795ADAB0
+          name: Global cross-region model inference tokens per day for Cohere Embed
+            V4
+        tpm:
+          code: L-4C3F0FE6
+          name: Cross-region model inference tokens per minute for Cohere Embed V4
   inference_profiles:
   - global
+  - us
   inference_types:
   - INFERENCE_PROFILE
   model_id: cohere.embed-v4:0
   provider: Cohere
 - endpoints:
-    base:
+    us:
       quotas:
         concurrent: null
         rpm:
-          code: L-11512E58
-          name: On-demand model inference requests per minute for Cohere Rerank 3.5
+          code: L-4F18EF2F
+          name: Cross-region model inference requests per minute for Meta Llama 4
+            Maverick V1
+        tpd: null
+        tpm:
+          code: L-DE3FBBF4
+          name: Cross-region model inference tokens per minute for Meta Llama 4 Maverick
+            V1
+  inference_profiles:
+  - us
+  inference_types:
+  - INFERENCE_PROFILE
+  model_id: meta.llama4-maverick-17b-instruct-v1:0
+  provider: Meta
+- endpoints: {}
+  inference_types: []
+  model_id: meta.llama4-maverick-17b-instruct-v1:0:128k
+  provider: Meta
+- endpoints: {}
+  inference_types: []
+  model_id: meta.llama4-maverick-17b-instruct-v1:0:1m
+  provider: Meta
+- endpoints:
+    us:
+      quotas:
+        concurrent: null
+        rpm:
+          code: L-751B753A
+          name: Cross-region model inference requests per minute for Meta Llama 4
+            Scout V1
+        tpd: null
+        tpm:
+          code: L-532E6630
+          name: Cross-region model inference tokens per minute for Meta Llama 4 Scout
+            V1
+  inference_profiles:
+  - us
+  inference_types:
+  - INFERENCE_PROFILE
+  model_id: meta.llama4-scout-17b-instruct-v1:0
+  provider: Meta
+- endpoints: {}
+  inference_types: []
+  model_id: meta.llama4-scout-17b-instruct-v1:0:10m
+  provider: Meta
+- endpoints: {}
+  inference_types: []
+  model_id: meta.llama4-scout-17b-instruct-v1:0:128k
+  provider: Meta
+- endpoints:
+    us:
+      quotas:
+        concurrent: null
+        rpm:
+          code: L-6E046197
+          name: Cross-region model inference requests per minute for Twelve Labs Pegasus
         tpd: null
         tpm: null
+  inference_profiles:
+  - global
+  - us
   inference_types:
-  - ON_DEMAND
-  model_id: cohere.rerank-v3-5:0
-  provider: Cohere
+  - INFERENCE_PROFILE
+  model_id: twelvelabs.pegasus-1-2-v1:0
+  provider: TwelveLabs
 - endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-46D383AF
-          name: On-demand model inference requests per minute for Meta Llama 3 70B
-            Instruct
-        tpd: null
-        tpm:
-          code: L-609E24B0
-          name: On-demand model inference tokens per minute for Meta Llama 3 70B Instruct
-  inference_types:
-  - ON_DEMAND
-  model_id: meta.llama3-70b-instruct-v1:0
-  provider: Meta
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-320BEFEB
-          name: On-demand model inference requests per minute for Meta Llama 3 8B
-            Instruct
-        tpd: null
-        tpm:
-          code: L-03A9B835
-          name: On-demand model inference tokens per minute for Meta Llama 3 8B Instruct
-  inference_types:
-  - ON_DEMAND
-  model_id: meta.llama3-8b-instruct-v1:0
-  provider: Meta
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-D9A35062
-          name: On-demand model inference requests per minute for Mistral 7B Instruct
-        tpd: null
-        tpm:
-          code: L-02D831F1
-          name: On-demand model inference tokens per minute for Mistral AI Mistral
-            7B Instruct
-  inference_types:
-  - ON_DEMAND
-  model_id: mistral.mistral-7b-instruct-v0:2
-  provider: Mistral AI
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-3AF844DB
-          name: On-demand model inference requests per minute for Mistral Large
-        tpd: null
-        tpm:
-          code: L-01447289
-          name: On-demand model inference tokens per minute for Mistral AI Mistral
-            Large
-  inference_types:
-  - ON_DEMAND
-  model_id: mistral.mistral-large-2402-v1:0
-  provider: Mistral AI
-- endpoints:
-    base:
-      quotas:
-        concurrent: null
-        rpm:
-          code: L-FD938632
-          name: On-demand model inference requests per minute for Mistral Mixtral
-            8x7b Instruct
-        tpd: null
-        tpm:
-          code: L-490F4D1F
-          name: On-demand model inference tokens per minute for Mistral AI Mixtral
-            8X7BB Instruct
-  inference_types:
-  - ON_DEMAND
-  model_id: mistral.mixtral-8x7b-instruct-v0:1
-  provider: Mistral AI
-- endpoints:
-    global:
+    us:
       quotas:
         concurrent: null
         rpm: null
         tpd: null
         tpm: null
   inference_profiles:
-  - global
+  - us
   inference_types:
   - INFERENCE_PROFILE
-  model_id: twelvelabs.pegasus-1-2-v1:0
-  provider: TwelveLabs
+  model_id: writer.palmyra-x4-v1:0
+  provider: Writer
+- endpoints:
+    us:
+      quotas:
+        concurrent: null
+        rpm: null
+        tpd: null
+        tpm: null
+  inference_profiles:
+  - us
+  inference_types:
+  - INFERENCE_PROFILE
+  model_id: writer.palmyra-x5-v1:0
+  provider: Writer
